--- a/snow-front/src/index.css
+++ b/snow-front/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position:relative;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header {
+  min-height:50px;
+  background-color: #33383d;
+  color: #3569b2;
+}
+
+.main{
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px 20px;
+}
+
+.footer {
+  min-height: 50px;
+  padding: 20px;
+  background-color: #212529;
+  color: #3569b2;
+}
+
+.navbar a{
+  color: white;
+  text-decoration: none;
+  margin: 20px;
+}
+
+.current {
+  border-bottom: 4px solid white;
+}
+
+.app, .app-page-not-found{ 
+  min-height: 100vh;
+  margin: 0; 
+  
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
