--- a/snow-front/src/App.css
+++ b/snow-front/src/App.css
@@ -15,14 +15,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #768ab3;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(141, 144, 148);
 }
 
 .App-link {
