--- a/snow-front/src/index.css
+++ b/snow-front/src/index.css
@@ -1,23 +1,22 @@
 body {
-  margin: 0;
+  margin: 10pt;
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Consolas", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position:relative;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Trirong", serif;
 }
 
 .header {
   min-height:50px;
-  background-color: #33383d;
-  color: #3569b2;
+  background: -webkit-linear-gradient(#a685b8, #c2adce);
+  background-blend-mode: lighten;
+  font-family: "Trirong", serif;
+  color: #698ab8;
 }
 
 .main{
@@ -29,25 +28,33 @@ code {
 .footer {
   min-height: 50px;
   padding: 20px;
-  background-color: #212529;
-  color: #3569b2;
+  background-color: #e7e9f3;
+  background-blend-mode:soft-light;
+  font-family: "Audiowide", sans-serif;
+  color: #698ab8;
+}
+
+.h1 {
+  color: white;
 }
 
 .navbar a{
-  color: white;
+  color: #03f0e4;
   text-decoration: none;
+  font-family: "Audiowide", sans-serif;
   margin: 20px;
 }
 
 .current {
-  border-bottom: 4px solid white;
+  border-bottom: 4px solid rgb(43, 255, 0);
 }
 
 .app, .app-page-not-found{ 
   min-height: 100vh;
   margin: 10; 
-  
+  background-color: #e7e9f3;
   display: grid;
+  font-size: 15pt;
   grid-template-rows: auto 1fr auto;
 }
 
@@ -55,4 +62,16 @@ code {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
+}
+
+.card-body {
+  size: 10pt;
+  font-size: 15px;
+  height: 200px;
+  width: 400px;
+}
+
+.mh-10 {
+  text-align: center;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
