--- a/snow-front/src/index.css
+++ b/snow-front/src/index.css
@@ -19,6 +19,10 @@ code {
   color: #698ab8;
 }
 
+.h1 {
+  font-family: "Trirong", serif !important;
+}
+
 .main{
   max-width: 960px;
   margin: 0 auto;
@@ -92,7 +96,7 @@ code {
 }
 
 .card-body a{
-  color:rgb(116, 175, 175);
+  color:#9c91a1 !important;;
 }
 
 .card {
